--- a/src/css/tooplate-mini-finance.css
+++ b/src/css/tooplate-mini-finance.css
@@ -203,11 +203,95 @@ strong {
   border-bottom-color: var(--primary-color);
   color: var(--primary-color);
 }
+/*---------------------------------------
+  LOGIN PAGE              
+-----------------------------------------*/
+
+.container-authetication{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  max-width: 430px;
+  width: 100%;
+  background: #fff;
+  border-radius: 50px;
+  box-shadow: 0 5px 10px rgba(0,0,0,0.3);
+}
+.container-authetication .registration{
+  display: none;
+}
+#check:checked ~ .registration{
+  display: block;
+}
+#check:checked ~ .login{
+  display: none;
+}
+#check{
+  display: none;
+}
+.container-authetication .form{
+  padding: 2.5rem;
+}
+.form header{
+  font-size: 1.6rem;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 1.2rem;
+}
+ .form input{
+   height: 40px;
+   width: 100%;
+   padding: 0 11px;
+   font-size: 14px;
+   margin-bottom: 1rem;
+   border: 1px solid #ddd;
+   border-radius: 18px;
+   outline: none;
+ }
+ .form input:focus{
+   box-shadow: 0 1px 0 rgba(0,0,0,0.2);
+ }
+.form a{
+  font-size: 13px;
+  color: #009579;
+  text-decoration: none;
+}
+.form a:hover{
+  text-decoration: underline;
+}
+.form input.button{
+  color: #fff;
+  background: #009579;
+  font-size: 1rem;
+  font-weight: 500;
+  letter-spacing: 1px;
+  margin-top: 1.5rem;
+  cursor: pointer;
+  transition: 0.4s;
+}
+.form input.button:hover{
+  background: #006653;
+}
+.signup{
+  font-size: 13px;
+  text-align: left;
+}
+.signup label{
+  color: #009579;
+  cursor: pointer;
+}
+.signup label:hover{
+  text-decoration: underline;
+}
+
+
 
 
 /*---------------------------------------
   PROFILE IMAGE              
 -----------------------------------------*/
+
 .profile-image {
   border-radius: var(--border-radius-small);
   width: 32px;
@@ -953,8 +1037,14 @@ strong {
   SITE FOOTER              
 -----------------------------------------*/
 .site-footer {
-  padding-right: 20px;
-  padding-left: 20px;
+  position: fixed;
+  height: 50px;
+  left: 0;
+  bottom: 0px;
+  width: 100%;
+  background-color: #ececec transparent;
+  color: white;
+  text-align: center;
 }
 
 .copyright-text {
