imported bootstrap library imported react-credit-card library removed unused files imported React Card component redesign registration form (beta version)

--- a/src/css/tooplate-mini-finance.css
+++ b/src/css/tooplate-mini-finance.css
@@ -208,11 +208,11 @@ strong {
 -----------------------------------------*/
 
 .container-authetication{
-  position: absolute;
+  position:absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
-  max-width: 430px;
+  max-width: 680px;
   width: 100%;
   background: #fff;
   border-radius: 50px;
@@ -221,6 +221,7 @@ strong {
 .container-authetication .registration{
   display: none;
 }
+
 #check:checked ~ .registration{
   display: block;
 }
@@ -231,24 +232,44 @@ strong {
   display: none;
 }
 .container-authetication .form{
-  padding: 2.5rem;
+  padding: 2rem;
+  padding-bottom: 3rem;
 }
 .form header{
   font-size: 1.6rem;
   font-weight: 500;
   text-align: center;
-  margin-bottom: 1.2rem;
+  margin-bottom: 1.6rem;
 }
  .form input{
-   height: 40px;
+   height: 35px;
    width: 100%;
-   padding: 0 11px;
+   padding: 0 12px;
    font-size: 14px;
-   margin-bottom: 1rem;
+   margin-bottom: 0.5rem;
+   margin-left: 0rem;
    border: 1px solid #ddd;
    border-radius: 18px;
    outline: none;
  }
+ 
+ .form input[type="radio"]{
+  height: 15px;
+  width: 15px;
+  padding: 0 11px;  
+  margin-bottom: 1rem;
+  border: 1px solid #ddd;
+  outline: none;
+ }
+
+ .form span[class="signup"]{
+   padding-left: 20px;
+ }
+
+ .form label {
+    padding: 0 11px;
+ }
+
  .form input:focus{
    box-shadow: 0 1px 0 rgba(0,0,0,0.2);
  }
@@ -266,7 +287,7 @@ strong {
   font-size: 1rem;
   font-weight: 500;
   letter-spacing: 1px;
-  margin-top: 1.5rem;
+  margin-top: 3rem;
   cursor: pointer;
   transition: 0.4s;
 }
