--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,9 +1,6 @@
 /*
-
 Tooplate 2135 Mini Finance
-
 https://www.tooplate.com/view/2135-mini-finance
-
 */
 
 /*---------------------------------------
@@ -49,7 +46,6 @@ body {
   background-color: var(--white-color);
   font-family: var(--body-font-family); 
 }
-
 
 /*---------------------------------------
   TYPOGRAPHY               
@@ -129,7 +125,6 @@ strong {
   font-weight: var(--font-weight-bold);
 }
 
-
 /*---------------------------------------
   SECTION               
 -----------------------------------------*/
@@ -169,145 +164,6 @@ strong {
   width: 100px;
   height: auto;
 }
-
-
-/*---------------------------------------
-  TAB BAR              
------------------------------------------*/
-.tab-content {
-  background-color: var(--white-color);
-  border-radius: var(--border-radius-medium);
-}
-
-.nav-tabs {
-  border-bottom: 1px solid var(--border-color);
-  margin-bottom: 35px;
-}
-
-.nav-tabs .nav-link {
-  border-radius: 0;
-  border-top: 0;
-  border-right: 0;
-  border-left: 0;
-  color: var(--p-color);
-  font-size: var(--menu-font-size);
-  font-weight: var(--font-weight-normal);
-  padding: 15px 25px;
-  transition: all 0.3s;
-}
-
-.nav-tabs .nav-item.show .nav-link, 
-.nav-tabs .nav-link.active,
-.nav-tabs .nav-link:focus, 
-.nav-tabs .nav-link:hover {
-  border-bottom-color: var(--primary-color);
-  color: var(--primary-color);
-}
-/*---------------------------------------
-  LOGIN PAGE              
------------------------------------------*/
-
-.container-authetication{
-  position:absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  max-width: 400px;
-  width: 100%;
-  background: #fff;
-  border-radius: 50px;
-  box-shadow: 0 5px 10px rgba(0,0,0,0.3);
-}
-.container-authetication .registration{
-  display: none;
-}
-
-#check:checked ~ .registration{
-  display: block;
-}
-#check:checked ~ .login{
-  display: none;
-}
-#check{
-  display: none;
-}
-.container-authetication .form{
-  padding: 2rem;
-  padding-bottom: 3rem;
-}
-.form header{
-  font-size: 1.6rem;
-  font-weight: 500;
-  text-align: center;
-  margin-bottom: 1.6rem;
-}
- .form input{
-   height: 35px;
-   width: 100%;
-   padding: 0 12px;
-   font-size: 14px;
-   margin-bottom: 0.5rem;
-   margin-left: 0rem;
-   border: 1px solid #ddd;
-   border-radius: 18px;
-   outline: none;
- }
- 
- .form input[type="radio"]{
-  height: 15px;
-  width: 15px;
-  padding: 0 11px;  
-  margin-bottom: 1rem;
-  border: 1px solid #ddd;
-  outline: none;
- }
-
- .form span[class="signup"]{
-   padding-left: 20px;
- }
-
- .form label {
-    padding: 0 11px;
- }
-
- .form input:focus{
-   box-shadow: 0 1px 0 rgba(0,0,0,0.2);
- }
-.form a{
-  font-size: 13px;
-  color: #009579;
-  text-decoration: none;
-}
-.form a:hover{
-  text-decoration: underline;
-}
-.form input.button{
-  color: #fff;
-  background: #009579;
-  font-size: 1rem;
-  font-weight: 500;
-  letter-spacing: 1px;
-  margin-top: 3rem;
-  cursor: pointer;
-  transition: 0.4s;
-}
-.form input.button:hover{
-  background: #006653;
-}
-.signup{
-  font-size: 13px;
-  text-align: left;
-}
-.signup label{
-  color: #009579;
-  cursor: pointer;
-}
-.signup label:hover{
-  text-decoration: underline;
-}
-
-
-
 
 /*---------------------------------------
   PROFILE IMAGE              
@@ -404,7 +260,7 @@ strong {
 /*---------------------------------------
   NOTIFICATIONS ICON              
 -----------------------------------------*/
-.dropdown-menu.notifications-block-wrap {
+/* .dropdown-menu.notifications-block-wrap {
   min-width: 465px;
 }
 
@@ -444,7 +300,7 @@ strong {
 .notifications-icon {
   font-size: var(--p-font-size);
   color: var(--white-color);
-}
+} */
 
 
 /*---------------------------------------
@@ -481,194 +337,6 @@ strong {
 .custom-btn-italic {
   font-style: italic;
 }
-
-
-/*---------------------------------------
-  NAVIGATION              
------------------------------------------*/
-.sidebar {
-  background: var(--white-color);
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 100;
-  padding: 58px 0 0;
-}
-
-.sidebar-sticky {
-  height: calc(100vh - 58px);
-  overflow-x: hidden;
-  overflow-y: auto;
-  position: relative;
-}
-
-.logo-image {
-  width: 32px;
-  height: auto;
-}
-
-.navbar {
-  background: var(--white-color);
-  border-bottom: 1px solid var(--border-color);
-  padding-top: 8px;
-  padding-bottom: 8px;
-}
-
-.navbar .nav-link {
-  position: relative;
-}
-
-.navbar .header-form {
-  width: 35%;
-}
-
-.navbar .header-form .form-control {
-  margin-bottom: 0;
-}
-
-.navbar .dropdown-toggle::after {
-  display: none;
-}
-
-.dropdown-menu {
-  overflow: hidden;
-  min-width: 240px;
-  padding-top: 15px;
-  padding-bottom: 15px;
-}
-
-.dropdown-toggle {
-  width: 32px;
-}
-
-.dropdown-toggle .start-100 {
-  top: 8px;
-  left: 68%!important;
-}
-
-.dropdown .dropdown-item {
-  border-radius: var(--border-radius-small);
-  color: var(--p-color);
-  font-size: var(--menu-font-size);
-  font-weight: var(--font-weight-light);
-  display: inline-block;
-  margin-right: 15px;
-  margin-left: 15px;
-  padding-top: 7px;
-  padding-bottom: 7px;
-  width: auto;
-}
-
-.dropdown .dropdown-item:hover {
-  background: var(--primary-color);
-  color: var(--white-color);
-}
-
-.navbar-nav .dropdown-menu {
-  border-color: transparent;
-  border-radius: var(--border-radius-small);
-  position: absolute;
-}
-
-.dropdown-menu[data-bs-popper] {
-  right: 0;
-  left: auto;
-}
-
-#sidebarMenu .nav {
-  flex-wrap: inherit;
-}
-
-#sidebarMenu .nav-link {
-  border-radius: var(--border-radius-small);
-  color: var(--p-color);
-  font-size: var(--menu-font-size);
-  display: inline-block;
-  position: relative;
-  margin-top: 5px;
-}
-
-#sidebarMenu .nav-link.active, 
-#sidebarMenu .nav-link:hover {
-  background: var(--primary-color);
-  color: var(--white-color);
-}
-
-.navbar-toggler {
-  background: var(--primary-color);
-  border-radius: var(--border-radius-small);
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  z-index: 222;
-  border: 0;
-  padding: 0;
-  cursor: pointer;
-  margin: 10px;
-  width: 40px;
-  height: 40px;
-  outline: none;
-}
-
-.navbar-toggler:focus {
-  outline: none;
-  box-shadow: none;
-}
-
-.navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
-  background: transparent;
-}
-
-.navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:before,
-.navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:after {
-  transition: top 300ms 50ms ease, -webkit-transform 300ms 350ms ease;
-  transition: top 300ms 50ms ease, transform 300ms 350ms ease;
-  transition: top 300ms 50ms ease, transform 300ms 350ms ease, -webkit-transform 300ms 350ms ease;
-  top: 0;
-}
-
-.navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:before {
-  transform: rotate(45deg);
-}
-
-.navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:after {
-  transform: rotate(-45deg);
-}
-
-.navbar-toggler .navbar-toggler-icon {
-  background: var(--white-color);
-  transition: background 10ms 300ms ease;
-  display: block;
-  margin: auto;
-  width: 23px;
-  height: 2px;
-  position: relative;
-}
-
-.navbar-toggler .navbar-toggler-icon:before,
-.navbar-toggler .navbar-toggler-icon:after {
-  transition: top 300ms 350ms ease, -webkit-transform 300ms 50ms ease;
-  transition: top 300ms 350ms ease, transform 300ms 50ms ease;
-  transition: top 300ms 350ms ease, transform 300ms 50ms ease, -webkit-transform 300ms 50ms ease;
-  position: absolute;
-  right: 0;
-  left: 0;
-  background: var(--white-color);
-  width: 23px;
-  height: 2px;
-  content: '';
-}
-
-.navbar-toggler .navbar-toggler-icon::before {
-  top: -8px;
-}
-
-.navbar-toggler .navbar-toggler-icon::after {
-  top: 8px;
-}
-
 
 /*---------------------------------------
   CUSTOM BLOCK               
@@ -892,119 +560,6 @@ strong {
   margin-right: 10px;
 }
 
-
-/*---------------------------------------
-  SEARCH, PROFILE FORM               
------------------------------------------*/
-.profile-form .input-group .form-control {
-  background: #e9ecef;
-}
-
-.profile-form .profile-image {
-  width: 52px;
-  height: 52px;
-}
-
-.profile-form .input-group:not(.has-validation)>:not(:last-child):not(.dropdown-toggle):not(.dropdown-menu):not(.form-floating) {
-  border-radius: var(--border-radius-medium);
-}
-
-.profile-form .input-group>:not(:first-child):not(.dropdown-menu):not(.valid-tooltip):not(.valid-feedback):not(.invalid-tooltip):not(.invalid-feedback) {
-  margin-left: 0;
-  border-radius: var(--border-radius-medium);
-}
-
-
-/*---------------------------------------
-  ACCOUNT TABLE               
------------------------------------------*/
-.account-table {
-  background: var(--section-bg-color);
-  border-radius: var(--border-radius-small);
-  position: relative;
-  overflow: hidden;
-}
-
-.account-table>:not(caption)>*>* {
-  border-bottom: 0;
-  padding: 15px 10px;
-}
-
-.account-table thead {
-  background: var(--custom-btn-bg-color);
-}
-
-.account-table th,
-.account-table tr {
-  font-size: var(--btn-font-size);
-  padding: 15px 10px;
-}
-
-.account-table th {
-  padding: 12px 15px;
-}
-
-.account-table tr {
-  font-weight: var(--font-weight-normal);
-}
-
-.account-table tbody tr:nth-child(odd) {
-  background: var(--white-color);
-}
-
-.badge {
-  border-radius: var(--border-radius-large);
-  font-weight: var(--font-weight-normal);
-  line-height: normal;
-  padding-right: 10px;
-  padding-left: 10px;
-  padding-bottom: 4px;
-}
-
-
-/*---------------------------------------
-  PAGINATION              
------------------------------------------*/
-.pagination {
-  margin-top: 20px;
-}
-
-.page-link {
-  border-radius: var(--border-radius-medium);
-  color: var(--p-color);
-  font-size: var(--btn-font-size);
-  margin: 0 5px;
-  padding: 10px 20px;
-}
-
-.page-link:hover,
-.page-item:first-child .page-link:hover,
-.page-item:last-child .page-link:hover {
-  background-color: var(--custom-btn-bg-color);
-  color: var(--white-color);
-}
-
-.page-item:not(:first-child) .page-link {
-  margin-left: 10px;
-}
-
-.page-item:first-child .page-link {
-  margin-right: 10px;
-}
-
-.page-item:first-child .page-link,
-.page-item:last-child .page-link {
-  border-radius: var(--border-radius-medium);
-  font-weight: var(--font-weight-bold);
-  margin-left: 15px;
-}
-
-.active>.page-link, .page-link.active {
-  background-color: var(--custom-btn-bg-color);
-  border-color: var(--secondary-color);
-}
-
-
 /*---------------------------------------
   CUSTOM FORM               
 -----------------------------------------*/
@@ -1052,26 +607,6 @@ strong {
   background: var(--custom-btn-bg-color);
   border-color: transparent;
 }
-
-
-/*---------------------------------------
-  SITE FOOTER              
------------------------------------------*/
-.site-footer {
-  position: fixed;
-  height: 50px;
-  left: 0;
-  bottom: 0px;
-  width: 100%;
-  background-color: #ececec transparent;
-  color: white;
-  text-align: center;
-}
-
-.copyright-text {
-  font-size: var(--copyright-font-size);
-}
-
 
 /*---------------------------------------
   RESPONSIVE STYLES               
@@ -1154,7 +689,6 @@ strong {
     position: inherit;
   }
 }
-
 
 @media screen and (max-width: 480px) {
   h1 {
