--- a/src/Components/LoginPage/login.css
+++ b/src/Components/LoginPage/login.css
@@ -70,7 +70,8 @@
    }
   .form a{
     font-size: 13px;
-    color: #009579;
+    color: #1678fbff;
+    padding-left: 1em;
     text-decoration: none;
   }
   .form a:hover{
@@ -78,7 +79,7 @@
   }
   .form input.button{
     color: #fff;
-    background: #009579;
+    background: #1678fbff;
     font-size: 1rem;
     font-weight: 500;
     letter-spacing: 1px;
@@ -87,14 +88,15 @@
     transition: 0.4s;
   }
   .form input.button:hover{
-    background: #006653;
+    background: #A8DADC;
+    border-color: transparent;
   }
   .signup{
     font-size: 13px;
     text-align: left;
   }
   .signup label{
-    color: #009579;
+    color: #1678fbff;
     cursor: pointer;
   }
   .signup label:hover{
