--- a/src/css/app.css
+++ b/src/css/app.css
@@ -25,7 +25,7 @@
   --border-color:                 #ccdde2ff;
   --link-hover-color:             #DC602E;
 
-  --body-font-family:             'Montserrat', sans-serif;
+  --body-font-family:             'Montserrat Alternates', sans-serif;
   --h1-font-size:                 74px;
   --h2-font-size:                 46px;
   --h3-font-size:                 32px;
