--- a/src/Components/DashboardPage/MyWalletTab/wallet.css
+++ b/src/Components/DashboardPage/MyWalletTab/wallet.css
@@ -2,18 +2,18 @@
   CUSTOM PROPERTIES ( VARIABLES )             
 -----------------------------------------*/
 :root {
-    --white-color:                  #ffffff;
-    --primary-color:                #E63946;
-    --secondary-color:              #F1FAEE;
-    --section-bg-color:             #ececec;
-    --primary-bg-color:             #E63946;
-    --custom-btn-bg-color:          #A8DADC;
-    --custom-btn-bg-hover-color:    #1D3557;
-    --heading-color:                #1D3557;
-    --dark-color:                   #000000;
-    --p-color:                      #717275;
-    --border-color:                 #e0e0e5;
-    --link-hover-color:             #E63946;
+  --white-color:                  #ffffff;
+  --dark-color:                   #000000;
+  --primary-color:                #1678fb;
+  --secondary-color:              #44CFCB;
+  --section-bg-color:             #eee;
+  --primary-bg-color:             #a60067;
+  --custom-btn-bg-color:          #ffffffff;
+  --custom-btn-bg-hover-color:    #e94f37ff;
+  --heading-color:                #122C34;
+  --p-color:                      #1d3557ff;
+  --border-color:                 #ccdde2ff;
+  --link-hover-color:             #DC602E;
   
     --body-font-family:             'Unbounded';
   
@@ -58,20 +58,31 @@
   
   .account-table thead {
     background: var(--custom-btn-bg-color);
+    
+    
   }
   
   .account-table th,
   .account-table tr {
-    font-size: var(--btn-font-size);
+    font-size: 16px;
+    font-weight: 400;
+    padding: 15px 10px;
+  }
+
+  .account-table thead th {
+    font-size: 16px;
+    font-weight: 600;
+    text-decoration-line: underline;
     padding: 15px 10px;
   }
   
   .account-table th {
     padding: 12px 15px;
+    
   }
   
   .account-table tr {
-    font-weight: var(--font-weight-normal);
+    font-weight: 300;
   }
   
   .account-table tbody tr:nth-child(odd) {
