--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -11,7 +11,7 @@
 }
 
 .button {
-    background: #1678fbff;
+    background: #1678fb;
     color: #fff;
     font-size: 0.8rem;
     font-weight: 500;
@@ -40,3 +40,4 @@
     width: auto;
     margin-top: 0.5rem;
 }
+
