--- a/src/Components/LoginPage/login.css
+++ b/src/Components/LoginPage/login.css
@@ -70,7 +70,7 @@
    }
   .form a{
     font-size: 13px;
-    color: #1678fbff;
+    color: #1678fb;
     padding-left: 1em;
     text-decoration: none;
   }
@@ -79,7 +79,7 @@
   }
   .form input.button{
     color: #fff;
-    background: #1678fbff;
+    background: #1678fb;
     font-size: 1rem;
     font-weight: 500;
     letter-spacing: 1px;
@@ -96,7 +96,7 @@
     text-align: left;
   }
   .signup label{
-    color: #1678fbff;
+    color: #1678fb;
     cursor: pointer;
   }
   .signup label:hover{
