--- a/src/Components/DashboardPage/SettingsTab/nav.css
+++ b/src/Components/DashboardPage/SettingsTab/nav.css
@@ -1,41 +1,4 @@
-/*---------------------------------------
-  CUSTOM PROPERTIES ( VARIABLES )             
------------------------------------------*/
-:root {
-  --white-color:                  #ffffff;
-  --dark-color:                   #000000;
-  --primary-color:                #1678fb;
-  --secondary-color:              #44CFCB;
-  --section-bg-color:             #eee;
-  --primary-bg-color:             #a60067;
-  --custom-btn-bg-color:          #ffffffff;
-  --custom-btn-bg-hover-color:    #e94f37ff;
-  --heading-color:                #122C34;
-  --p-color:                      #1d3557ff;
-  --border-color:                 #ccdde2ff;
-  --link-hover-color:             #DC602E;
-  
-    --body-font-family:             'Unbounded';
-  
-    --h1-font-size:                 74px;
-    --h2-font-size:                 46px;
-    --h3-font-size:                 32px;
-    --h4-font-size:                 28px;
-    --h5-font-size:                 24px;
-    --h6-font-size:                 22px;
-    --p-font-size:                  18px;
-    --menu-font-size:               14px;
-    --btn-font-size:                12px;
-    --copyright-font-size:          10px;
-  
-    --border-radius-large:          100px;
-    --border-radius-medium:         20px;
-    --border-radius-small:          10px;
-  
-    --font-weight-light:            300;
-    --font-weight-normal:           400;
-    --font-weight-bold:             700;
-  }
+
   
   body {
     background-color: var(--white-color);
@@ -151,9 +114,9 @@
   #sidebarMenu .nav-link:hover {
     background: var(--primary-color);
     color: var(--white-color);
-  }
+  } 
   
-  .navbar-toggler {
+  /* .navbar-toggler {
     background: var(--primary-color);
     border-radius: var(--border-radius-small);
     position: fixed;
@@ -168,9 +131,9 @@
     width: 40px;
     height: 40px;
     outline: none;
-  }
+  } */
   
-  .navbar-toggler:focus {
+  /* .navbar-toggler:focus {
     outline: none;
     box-shadow: none;
   }
@@ -225,4 +188,4 @@
   
   .navbar-toggler .navbar-toggler-icon::after {
     top: 8px;
-  }
+  } */
