--- a/src/Components/HomePage/home.css
+++ b/src/Components/HomePage/home.css
@@ -1,30 +1,30 @@
-.home {
+.home-container {
+    width: stretch;
+    
+}
+.text-container {
     /* aling items in the center of page */
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    align-items: center;
-    font-weight: 800;
-    font-family: "Montserrat Alternates";
-}
-.globe {
-    height: 55px;
-    width: 20px;
-}
-.first-title {
-    margin-left: 20rem;
+    height: 820px;
 }
 
-.home div {
-    margin: 8rem 40rem 2rem 8rem;
-    display: flex;
-    justify-content: center;
-    align-items: left;
+.first-title-container {
+    margin: 0rem 30rem 10rem 6rem;
 }
 
-.second-title h3 {
+.second-title-container {
+    margin: 0rem 36rem 0rem 10rem;
+}
+.first-title-container h2 {
+    margin-bottom: 0px;
+    
+}
+
+.second-title-container h3{
     font-size: 24px;
-    margin-left: 0rem;
+    margin-bottom: 0px;
 }
 
 .bi-box {
@@ -38,14 +38,11 @@
     color: var(--white-color);
     font-size: 20px;
     font-weight: var(--font-weight-normal);
-    letter-spacing: 0px;
-    cursor: pointer;
     transition: 0.4s;
     height: 40px;
     width: auto;
-    margin-top: 1rem;
-    border: 1px solid #ddd;
-    margin-left: 1rem;
+    border: 1px solid transparent;
+    margin-top: 0.5rem;
 }
 
 .title-btn:hover {
