--- a/src/Components/DashboardPage/SettingsTab/tab-bar.css
+++ b/src/Components/DashboardPage/SettingsTab/tab-bar.css
@@ -56,3 +56,115 @@ body {
   margin-left: 0;
   border-radius: var(--border-radius-medium);
 }
+
+/*---------------------------------------
+  NAVIGATION              
+-----------------------------------------*/
+.sidebar {
+    background: var(--white-color);
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 100;
+    padding: 58px 0 0;
+  }
+  
+  .sidebar-sticky {
+    height: calc(100vh - 58px);
+    overflow-x: hidden;
+    overflow-y: auto;
+    position: relative;
+  }
+  
+  .logo-image {
+    width: 32px;
+    height: auto;
+  }
+  
+  .navbar {
+    background: var(--white-color);
+    border-bottom: 1px solid var(--border-color);
+    padding-top: 8px;
+    padding-bottom: 8px;
+  }
+  
+  .navbar .nav-link {
+    position: relative;
+  }
+  
+  .navbar .header-form {
+    width: 35%;
+  }
+  
+  .navbar .header-form .form-control {
+    margin-bottom: 0;
+  }
+  
+  .navbar .dropdown-toggle::after {
+    display: none;
+  }
+  
+  .dropdown-menu {
+    overflow: hidden;
+    min-width: 240px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+  
+  .dropdown-toggle {
+    width: 32px;
+  }
+  
+  .dropdown-toggle .start-100 {
+    top: 8px;
+    left: 68%!important;
+  }
+  
+  .dropdown .dropdown-item {
+    border-radius: var(--border-radius-small);
+    color: var(--p-color);
+    font-size: var(--menu-font-size);
+    font-weight: var(--font-weight-light);
+    display: inline-block;
+    margin-right: 15px;
+    margin-left: 15px;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    width: auto;
+  }
+  
+  .dropdown .dropdown-item:hover {
+    background: var(--primary-color);
+    color: var(--white-color);
+  }
+  
+  .navbar-nav .dropdown-menu {
+    border-color: transparent;
+    border-radius: var(--border-radius-small);
+    position: absolute;
+  }
+  
+  .dropdown-menu[data-bs-popper] {
+    right: 0;
+    left: auto;
+  }
+  
+  #sidebarMenu .nav {
+    flex-wrap: inherit;
+  }
+  
+  #sidebarMenu .nav-link {
+    border-radius: var(--border-radius-small);
+    color: var(--p-color);
+    font-size: var(--menu-font-size);
+    display: inline-block;
+    position: relative;
+    margin-top: 5px;
+  }
+  
+  #sidebarMenu .nav-link.active, 
+  #sidebarMenu .nav-link:hover {
+    background: var(--primary-color);
+    color: var(--white-color);
+  }
