--- a/src/Components/HomePage/home.css
+++ b/src/Components/HomePage/home.css
@@ -6,19 +6,21 @@
     /* aling items in the center of page */
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     height: 820px;
 }
 
 .first-title-container {
-    margin: 0rem 30rem 10rem 6rem;
+    margin: 6rem 36rem 6rem 10rem;
 }
 
 .second-title-container {
-    margin: 0rem 36rem 0rem 10rem;
+    margin: 0rem 40rem 6rem 10rem;
 }
 .first-title-container h2 {
     margin-bottom: 0px;
+    
+    font-weight: 500;
     
 }
 
@@ -28,16 +30,18 @@
 }
 
 .bi-box {
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 400;
 }
 
 .title-btn {
-    border-radius: 6px;
+    border-radius: 8px;
     background: var(--primary-color);
     color: var(--white-color);
     font-size: 20px;
-    font-weight: var(--font-weight-normal);
+    font-weight: 400;
+    letter-spacing: 1px;
+    padding: 6px 5px 0px 5px;
     transition: 0.4s;
     height: 40px;
     width: auto;
