--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -2,15 +2,11 @@
   SITE FOOTER              
 -----------------------------------------*/
 .site-footer {
-    position: fixed;
-    height: 50px;
-    left: 0;
-    bottom: 0px;
-    width: 100%;
-    background-color: #ececec transparent;
-    color: white;
-    text-align: center;
+    height: 60px;
+    border-top: 1px solid #ddd;
 }
+
+
 
 .copyright-text {
     font-size: var(--copyright-font-size);
@@ -18,4 +14,10 @@
 
 .label {
     font-size: 12px;
+}
+
+.footer-container {
+    width: fit-content;
+    margin: 0 auto;
+    height: max-content;
 }
