--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -7,8 +7,12 @@
     align-items: center;
     justify-content: center;
     margin-right: 1rem;
-    
-    
+}
+
+.bi-box {
+    font-size: 20px;
+    font-weight: 400;
+    margin-left: 1rem;
 }
 
 .button {
@@ -29,7 +33,7 @@
 
 .link {
     color: #000;
-    font-size: 0.9rem;
+    font-size: 0.9rem; 
     font-weight: 500;
     cursor: pointer;
     transition: 0.4s;
@@ -51,7 +55,7 @@
 .button:hover {
     background: #65a8ff;
     border-color: transparent;
-    color: var(--black-color);
+    color: var(--white-color);
 }
 
 .link:hover {
