--- a/src/Components/LoginPage/login.css
+++ b/src/Components/LoginPage/login.css
@@ -2,83 +2,71 @@
 --border-radius-medium:         20px;
 --border-radius-small:          10px; */
 
-
-.container-authetication{
-    position:absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+.container-authetication {
     max-width: 400px;
-    width: 100%;
     background: #fff;
-    border-radius: var(--border-radius-medium);
-    box-shadow: 0 5px 10px rgba(0,0,0,0.3);
-  }
-  .container-authetication .registration{
-    display: none;
-  }
-  
-  #check:checked ~ .registration{
-    display: block;
-  }
-  #check:checked ~ .login{
-    display: none;
-  }
-  #check{
-    display: none;
-  }
-  .container-authetication .form{
+    border-radius: var(--border-radius-small);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3); 
+    flex: 1;
+    
+}
+
+.login form {
+    
+}
+
+.form {
     padding: 2rem;
     padding-bottom: 3rem;
-  }
-  .form header{
+}
+.form header {
     font-size: 1.6rem;
     font-weight: 500;
     text-align: center;
     margin-bottom: 1.6rem;
-  }
-   .form input{
-     height: 35px;
-     width: 100%;
-     padding: 0 12px;
-     font-size: 14px;
-     margin-bottom: 0.5rem;
-     margin-left: 0rem;
-     border: 1px solid #ddd;
-     border-radius: var(--border-radius-medium);
-     outline: none;
-   }
-   
-   .form input[type="radio"]{
+}
+.form input {
+    height: 35px;
+    width: 100%;
+    padding: 0 12px;
+    font-size: 14px;
+    margin-bottom: 0.5rem;
+    margin-left: 0rem;
+    border: 1px solid #ddd;
+    border-radius: var(--border-radius-small);
+    outline: none;
+}
+
+.form input[type="radio"] {
     height: 15px;
     width: 15px;
-    padding: 0 11px;  
+    padding: 0 11px;
     margin-bottom: 1rem;
     border: 1px solid #ddd;
     outline: none;
-   }
-  
-   .form span[class="signup"]{
-     padding-left: 20px;
-   }
-  
-   .form label {
-      padding: 0 11px;
-   }
-  
-   .form input:focus{
-     box-shadow: 0 1px 0 rgba(0,0,0,0.2);
-   }
-  .form a{
+}
+
+.form span[class="signup"] {
+    padding-left: 20px;
+}
+
+.form label {
+    padding: 0 11px;
+}
+
+.form input:focus {
+    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
+}
+.form a {
     font-size: 13px;
     color: #1678fb;
     padding-left: 1em;
     text-decoration: none;
-  }
-  .form a:hover{
+}
+.form a:hover {
     text-decoration: underline;
-  }
-  .form input.button{
+}
+.form input.button {
     color: #fff;
     background: #1678fb;
     font-size: 1rem;
@@ -87,20 +75,19 @@
     margin-top: 3rem;
     cursor: pointer;
     transition: 0.4s;
-  }
-  .form input.button:hover{
-    background: #A8DADC;
+}
+.form input.button:hover {
+    background: #a8dadc;
     border-color: transparent;
-  }
-  .signup{
+}
+.signup {
     font-size: 13px;
     text-align: left;
-  }
-  .signup label{
+}
+.signup label {
     color: #1678fb;
     cursor: pointer;
-  }
-  .signup label:hover{
+}
+.signup label:hover {
     text-decoration: underline;
-  }
-  
+}
