improved css grid with flexbox added personal info form page

--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -2,8 +2,9 @@
   SITE FOOTER              
 -----------------------------------------*/
 .site-footer {
-    height: 60px;
-    border-top: 1px solid #ddd;
+	height: 60px;
+	border-top: 1px solid #ddd;
+	flex: 0 0 40px;
 }
 
 
