--- a/src/Components/LoginPage/login.css
+++ b/src/Components/LoginPage/login.css
@@ -5,7 +5,7 @@
 .container-authetication {
     max-width: 400px;
     background: #fff;
-    border-radius: var(--border-radius-small);
+    border-radius: var(--border-radius-medium);
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
     align-self: center;
 }
