--- a/src/Components/DashboardPage/MyWalletTab/wallet.css
+++ b/src/Components/DashboardPage/MyWalletTab/wallet.css
@@ -1,4 +1,11 @@
 /*---------------------------------------
+  LAYOUT         
+-----------------------------------------*/
+.wallet-container{
+  display: flex;
+}
+
+/*---------------------------------------
   ACCOUNT TABLE               
 -----------------------------------------*/
 .account-table {
