--- a/src/Components/DashboardPage/SettingsTab/tab-bar.css
+++ b/src/Components/DashboardPage/SettingsTab/tab-bar.css
@@ -57,20 +57,16 @@
 -----------------------------------------*/
 .sidebar {
     background: var(--white-color);
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 100;
+    flex: 0 0 300px;
     padding: 58px 0 0;
   }
   
-  .sidebar-sticky {
+  /* .sidebar-sticky {
     height: calc(100vh - 58px);
     overflow-x: hidden;
     overflow-y: auto;
     position: relative;
-  }
+  } */
   
   .logo-image {
     width: 32px;
