updated readme updated css layout

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -53,8 +53,11 @@
 
 .content-container{
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   flex: 1 1 auto;
+}
+.column {
+  padding: 2em;
 }
 
 #root {
