--- a/src/Components/RegisterPage/register.css
+++ b/src/Components/RegisterPage/register.css
@@ -1,62 +1,16 @@
 /*---------------------------------------
   SIDEBAR              
 -----------------------------------------*/
-.tracker {
+/* .tracker {
     margin: 0rem 2rem 1rem 2rem;
     font-size: 16px;
-}
-.form-group {
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-}
+} */
 
 .sidebar-container {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    align-items: left;
+    align-items: center;
     background-color: #eeeeee;
-    flex: 0 0 350px;
-}
-
-.form-container {    
-    background: #fff;
-    border-radius: var(--border-radius-medium);
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
-    max-width: 400px;
-    align-self: center;
-    margin: 0 250px;
-}
-
-.register-container {
-    display: flex;
-    flex-direction: row;
-    flex: 1;
-    align-items: stretch;    
-}
-
-
-
-.form {
-    padding: 2rem;
-    padding-bottom: 3rem;
-    
-
-}
-
-.form input {
-    height: 35px;
-    width: 100%;
-    padding: 0 12px;
-    font-size: 14px;
-    margin-bottom: 0.5rem;
-    margin-left: 0rem;
-    border: 1px solid #ddd;
-    border-radius: var(--border-radius-small);
-    outline: none;
-}
-
-.form label {
-    padding: 0 11px;
+    flex: 0 0 250px;
 }
