--- a/src/css/app.css
+++ b/src/css/app.css
@@ -258,8 +258,50 @@ strong {
 }
 
 /*---------------------------------------
-  CUSTOM BUTTON               
+  CUSTOM BUTTONS      
 -----------------------------------------*/
+
+.button-primary {
+  background: #1678fb;
+  color: #fff;
+  font-size: 0.9em;
+  padding: 7px 5px 5px 5px;
+  font-weight: 500;
+  cursor: pointer;
+  transition: 0.4s;
+  margin-bottom: 0em;
+  margin-top: 0em;
+  height: 2.2em;
+  width: auto;   
+  border-radius: var(--border-radius-small);
+}
+.button-primary:hover {
+  background: #65a8ff;
+  border-color: transparent;
+  color: var(--white-color);
+}
+
+.button-secondary {
+  color: #000;
+  font-size: 0.9em; 
+  font-weight: 500;
+  cursor: pointer;
+  transition: 0.4s;
+  margin-bottom: 0em;
+  margin-top: 0em;
+  padding: 6px 10px 0px 10px;
+  height: 2.2em;
+  border: 1px solid #6e6e6e;
+  border-radius: var(--border-radius-small);
+}
+.button-secondary:hover {
+  border-color: transparent;
+  color:  #1678fb;
+  border: 1px solid #1678fb;
+  border-top-left-radius: var(--border-radius-small);
+  border-bottom-left-radius: var(--border-radius-small);
+}
+
 .custom-btn {
   background: var(--custom-btn-bg-color);
   border: 2px solid transparent;
@@ -291,6 +333,8 @@ strong {
 .custom-btn-italic {
   font-style: italic;
 }
+
+
 
 /*---------------------------------------
   CUSTOM BLOCK               
@@ -530,7 +574,45 @@ strong {
 /*---------------------------------------
   CUSTOM FORM               
 -----------------------------------------*/
-.custom-form .form-control {
+
+.form-container {    
+  background: #fff;
+  border-radius: var(--border-radius-medium);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+  max-width: 400px;
+  align-self: center;
+  margin: 0 auto;
+}
+
+.form-content {
+  padding: 2rem;
+  padding-bottom: 3rem;
+}
+
+.form-content input {
+  height: 35px;
+  width: 100%;
+  padding: 0 12px;
+  font-size: 14px;
+  margin-bottom: 0.5rem;
+  margin-left: 0rem;
+  border: 1px solid #ddd;
+  border-radius: var(--border-radius-small);
+  outline: none;
+}
+.form-content label {
+  padding: 0 11px;
+}
+
+
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+
+.custom-form .form-content {
   color: var(--p-color);
   border-radius: var(--border-radius-large);
   font-size: var(--menu-font-size);
@@ -541,23 +623,14 @@ strong {
   transition: all 0.3s;
 }
 
-.form-check-input:checked {
-  background-color: var(--custom-btn-bg-hover-color);
-  border-color: var(--custom-btn-bg-hover-color);
-}
-
-.form-check-label {
-  color: var(--p-color);
-}
-
-.custom-form .form-control:hover,
-.custom-form .form-control:focus {
+.form-container input:hover,
+.form-container input:focus {
   background: var(--section-bg-color);
   border-color: transparent;
 }
 
-.custom-form button[type="button"],
-.custom-form button[type="submit"] {
+.form-container button[type="button"],
+.form-container button[type="submit"] {
   border-radius: var(--border-radius-large);
   font-size: var(--menu-font-size);
   font-weight: var(--menu-font-weight);
@@ -565,17 +638,40 @@ strong {
   margin-bottom: 0;
 }
 
-.custom-form button[type="submit"] {
+.form-container button[type="submit"] {
   background: var(--custom-btn-bg-color);
   border: none;
   color: var(--white-color);
 }
 
-.custom-form button[type="submit"]:hover,
+.form-container button[type="submit"]:hover,
 .custom-form button[type="submit"]:focus {
   background: var(--custom-btn-bg-hover-color);
   border-color: transparent;
 }
+
+form input[type=radio] {
+  width: 1em;
+  height: 1em;
+  border: 0px;
+  margin: 0;
+}
+
+form label {
+  font-size: 14px;  
+}
+.form-content header {
+  margin-bottom: 2rem;
+  align-self: center;
+}
+
+.form-content footer {
+    display: inline-flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 2rem;
+}
+
 
 /*---------------------------------------
   RESPONSIVE STYLES               
