--- a/src/Components/RegisterPage/register.css
+++ b/src/Components/RegisterPage/register.css
@@ -14,3 +14,11 @@
     background-color: #eeeeee;
     flex: 0 0 250px;
 }
+
+.star {
+    color: red;
+    font-size: 12px;
+    width: fit-content;
+    display: inherit;
+
+}
