--- a/src/css/app.css
+++ b/src/css/app.css
@@ -582,16 +582,20 @@ strong {
   max-width: 400px;
   align-self: center;
   margin: 0 auto;
+
 }
 
 .form-content {
-  padding: 2rem;
-  padding-bottom: 3rem;
+	padding: 2rem;
+	padding-bottom: 3rem;
+	display: flex;
+	flex-direction:column;
+	align-items: stretch;
 }
 
-.form-content input {
+.form-content input:not([type="button"]) {
   height: 35px;
-  width: 100%;
+  width: auto;
   padding: 0 12px;
   font-size: 14px;
   margin-bottom: 0.5rem;
@@ -666,10 +670,9 @@ form label {
 }
 
 .form-content footer {
-    display: inline-flex;
-    flex-direction: row;
-    justify-content: space-around;
-    margin-top: 2rem;
+	margin-top: 2rem;
+	display: flex;
+	justify-content: space-between;
 }
 
 
