--- a/src/Components/RegisterPage/register.css
+++ b/src/Components/RegisterPage/register.css
@@ -19,6 +19,9 @@
     color: red;
     font-size: 12px;
     width: fit-content;
-    display: inherit;
+    display: inline;
+}
 
+.label{ 
+    display: inline;
 }
